Fixed some css errors, whitespace, investigated responsive behavior in menu

--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -415,7 +415,7 @@ ul.footer-links li{
 //Full width page styling stuff
 
 body.full-width, .content-listing, ul.content-listing li.listing{ width: 90%;
-       margin-left: a;
+       margin-left: auto;
        margin-right: auto;
        padding: 0% 5%;
 
